[gd_scene load_steps=23 format=2]

[ext_resource path="res://Chakyanel.gd" type="Script" id=1]
[ext_resource path="res://Sprite/Chakyanel.png" type="Texture" id=2]
[ext_resource path="res://Sounds/laser5.ogg" type="AudioStream" id=3]
[ext_resource path="res://Enemies/Bosses/Angel.gd" type="Script" id=4]
[ext_resource path="res://Enemies/Bosses/Chakyanel/Pylon.tscn" type="PackedScene" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 192, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 256, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 320, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 384, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 448, 128, 64, 64 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 10.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "Materializing",
"speed": 8.0
} ]

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=17]
resource_name = "Materialize"
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "cast_Shield_Ray"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "RaisePylons"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("Pylon/PylonSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ "Lowered", "Emerging", "Raised" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pylon/PylonSprite2:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ "Lowered", "Emerging", "Raised" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pylon/PylonSprite3:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ "Lowered", "Emerging", "Raised" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Pylon/PylonSprite4:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ "Lowered", "Emerging", "Raised" ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Pylon/PylonSprite5:animation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ "Lowered", "Emerging", "Raised" ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Pylon/PylonSprite6:animation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ "Lowered", "Emerging", "Raised" ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Pylon/PylonSprite7:animation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ "Lowered", "Emerging", "Raised" ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Pylon/PylonSprite8:animation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ "Lowered", "Emerging", "Raised" ]
}

[node name="Chakyanel" type="Node2D"]
script = ExtResource( 1 )

[node name="Angel" type="Node2D" parent="."]
position = Vector2( 360, 96 )
script = ExtResource( 4 )

[node name="ChakyanelSprite" type="AnimatedSprite" parent="Angel"]
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 5 )
frame = 3
playing = true

[node name="Line2D" type="Line2D" parent="Angel"]

[node name="ShieldSprite" type="AnimatedSprite" parent="Angel"]
visible = false
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 16 )

[node name="BasicBulletTimer" type="Timer" parent="."]

[node name="Pylon" type="Node2D" parent="."]

[node name="PylonSprite" parent="Pylon" instance=ExtResource( 5 )]
position = Vector2( 576, 804 )

[node name="PylonSprite2" parent="Pylon" instance=ExtResource( 5 )]
position = Vector2( 144, 804 )

[node name="PylonSprite3" parent="Pylon" instance=ExtResource( 5 )]
position = Vector2( 96, 612 )

[node name="PylonSprite4" parent="Pylon" instance=ExtResource( 5 )]
position = Vector2( 624, 612 )

[node name="PylonSprite5" parent="Pylon" instance=ExtResource( 5 )]
position = Vector2( 96, 420 )

[node name="PylonSprite6" parent="Pylon" instance=ExtResource( 5 )]
position = Vector2( 624, 420 )

[node name="PylonSprite7" parent="Pylon" instance=ExtResource( 5 )]
position = Vector2( 144, 228 )

[node name="PylonSprite8" parent="Pylon" instance=ExtResource( 5 )]
position = Vector2( 576, 228 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="IntroAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Materialize = SubResource( 17 )
anims/RaisePylons = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
[connection signal="animation_finished" from="IntroAnimationPlayer" to="." method="_on_IntroAnimationPlayer_animation_finished"]

[editable path="Pylon/PylonSprite"]

[editable path="Pylon/PylonSprite2"]

[editable path="Pylon/PylonSprite3"]

[editable path="Pylon/PylonSprite4"]

[editable path="Pylon/PylonSprite5"]

[editable path="Pylon/PylonSprite6"]

[editable path="Pylon/PylonSprite7"]

[editable path="Pylon/PylonSprite8"]
